# dassai

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
src/: args.rs  lib.rs  main.rs  processor.rs
tests/: flags.rs  integration.rs
